feat: add docker configuration and compose file

--- a/backend/CinemaCalcBackend/appsettings.json
+++ b/backend/CinemaCalcBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=cinemacalc;Username=parthiv;"
+  "DefaultConnection": "Host=localhost;Port=5432;Database=cinemacalc;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
